--- a/dot_i3/config
+++ b/dot_i3/config
@@ -76,7 +76,7 @@ mode "$mode_auto" {
 #bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
 #exec --no-startup-id pulseaudio
 exec --no-startup-id pa-applet
-bindsym $mod+Ctrl+m exec pavucontrol
+bindsym $mod+Ctrl+p exec pavucontrol
 
 ################################################################################################
 
