--- a/dot_i3/config
+++ b/dot_i3/config
@@ -75,7 +75,7 @@ mode "$mode_auto" {
 
 #bindsym $mod+Ctrl+m exec terminal -e 'alsamixer'
 #exec --no-startup-id pulseaudio
-exec --no-startup-id pa-applet
+#exec --no-startup-id pa-applet
 bindsym $mod+Ctrl+p exec pavucontrol
 
 ################################################################################################
@@ -266,7 +266,7 @@ exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent
 exec --no-startup-id numlockx on
 exec --no-startup-id nitrogen --restore; sleep 1; picom -b --config /home/gbottari/.config/picom.conf
 exec --no-startup-id nm-applet
-# exec --no-startup-id volumeicon
+exec --no-startup-id volumeicon
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id ~/.screenlayout/default.sh
 exec --no-startup-id redshift-gtk
