--- a/dot_config/polybar/config
+++ b/dot_config/polybar/config
@@ -10,10 +10,10 @@ alert = ${xrdb:color3}
 [bar/example]
 monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 48
+height = 2.5%
 fixed-center = false
 
-background = ${colors.background:77000000}
+background = ${colors.background:00000000}
 foreground = ${colors.foreground:#FFF}
 
 line-size = 2 
