--- a/dot_i3/config
+++ b/dot_i3/config
@@ -262,7 +262,6 @@ bindsym $mod+9 exec --no-startup-id blurlock
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id firefox
 exec --no-startup-id /usr/lib/geoclue-2.0/demos/agent
-#exec --no-startup-id dropbox
 exec --no-startup-id numlockx on
 exec --no-startup-id nitrogen --restore; sleep 1; picom -b --config /home/gbottari/.config/picom.conf
 exec --no-startup-id nm-applet
@@ -271,9 +270,11 @@ exec --no-startup-id xfce4-power-manager
 exec --no-startup-id ~/.screenlayout/default.sh
 exec --no-startup-id redshift-gtk
 exec --no-startup-id sleep 3; /home/gbottari/scripts/fix_keyboard.sh
+exec --no-startup-id solaar -w hide
 # exec --no-startup-id noisetorch -i
-
 # exec --no-startup-id blueman-applet
+#exec --no-startup-id dropbox
+
 # exec_always --no-startup-id sbxkb
 exec_always --no-startup-id fix_xcursor
 exec_always --no-startup-id wal -R && feh --bg-fill ~/Dropbox/wallpapers/default 
