Fix dropbox service

--- a/dot_config/systemd/user/dropbox.service.d/override.conf
+++ b/dot_config/systemd/user/dropbox.service.d/override.conf
@@ -4,6 +4,7 @@ Description=Dropbox
 [Service]
 Environment=DISPLAY=:0
 Type=simple
+ExecStart=
 ExecStart=/usr/bin/dropbox
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
